# neml2-workshop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  implicit_trajectory.dot  index.html  package.json  playground.py  plot_stress_strain.py  plot_trajectories.py  print_examples.py  requirements.txt
examples/: ArrheniusLaw.cxx  ArrheniusLaw.h  ArrheniusLaw.i  BallLauncher.cxx  BallLauncher.h  CustomIsotropicHardening.cxx  CustomIsotropicHardening.h  FlyingBall.cxx  FlyingBall.h  FlyingBall.i  ParametrizedFlyingBall.cxx  ParametrizedFlyingBall.h  ParametrizedFlyingBall.i  ex01.cxx  ex02.cxx  ex03.cxx  ex04.cxx  ex05.cxx  ex06.cxx  ex07.cxx  ex08.cxx  ex09.cxx  ex10.cxx  ex11.cxx  ex12.cxx  ex13.cxx  ex14.cxx  ex15.cxx  ex16.cxx  ex17.cxx  ex18.cxx  workshop.cxx  workshop.h
playground/: ArrheniusLaw.cxx  ArrheniusLaw.h  BallLauncher.cxx  BallLauncher.h  CustomIsotropicHardening.h  CustomIsotropicHardening.i  FlyingBall.h  ParametrizedFlyingBall.h  ex01.cxx  ex03.cxx  ex04.cxx  ex05.cxx  ex07.cxx  ex08.cxx  ex09.cxx  ex12.cxx  ex13.cxx  ex14.cxx  ex15.cxx  ex16.cxx  ex17.cxx  ex19.cxx  workshop.h
slides/: README.md  index.html
